# flexmerge

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: basic_usage.py
flexmerge/: __init__.py  merger.py  strategies.py
tests/: __init__.py  test_convenience_functions.py  test_merger.py  test_strategies.py
